...
// MARK: - Privates

private extension WorldEditView {
    var nameEditCell: some View {
        VStack {
            HStack {
                Text("Title", bundle: .module)
                Spacer()
            }
            TextField(
                String(localized: "Unregistered", bundle: .module),
                text: .init(
                    get: { viewModel.uiState.input.name ?? "" },
...
                        #selector(UIResponder.resignFirstResponder),
                        to: nil,
                        from: nil,
                        for: nil
                    )
                } label: {
                    Text(Image(systemName: "keyboard.chevron.compact.down"))
                        .font(.system(size: 15))
                }
            }
        }
    }
}
...
